--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ nav ul li a:hover {
 
 /* Фон кирпичной стены */
 .brick-wall {
-    background: url('https://www.transparenttextures.com/patterns/white-brick-wall.png');
+    background: url('https://images.wallpaperscraft.ru/image/single/stena_kirpichi_kirpichnaia_stena_174911_1920x1080.jpg');
     background-color: #333;
     background-blend-mode: multiply;
     background-size: cover;
